z-index fix for hovers popping over nav

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ nav {
   width: 100%;
   /* padding: 0 20px 0 20px; */
   overflow: hidden;
+  z-index: 100;
 }
 nav, footer {
   background-color: whitesmoke;
